# serve

./: .gitignore  Cargo.toml  Makefile  README.md  app.py  uwsgi.ini
build-utils/: Cargo.toml
build-utils/src/: lib.rs
deploy/reverse-proxy/: serve
deploy/systemd/: serve-go.service  serve-rs.service  serve.service
serve/: Cargo.toml  build.rs  config.example.toml
serve-cli/: Cargo.toml  build.rs
serve-cli/src/: cleanup.rs  config.rs  constants.rs  delete.rs  download.rs  http.rs  info.rs  list.rs  main.rs  progress.rs  retry.rs  upload.rs
serve-go/: config.example.toml  config.go  go.mod  main.go
serve-go/_tpl/: index.html
serve-rs/: Cargo.toml  config.example.toml
serve-rs/src/: main.rs  template.rs  utils.rs
serve-rs/templates/: template.html
serve/src/: browse.rs  catalog.rs  config.rs  http_utils.rs  main.rs  template.rs  uploads.rs  utils.rs
serve/templates/: template.html
utils/: common.py  config.py  template.html
