[workspace]
members = [
    "serve",
    "serve-cli",
]
resolver = "2"

[workspace.package]
version = "1.3.0"
edition = "2024"

[profile.release]
opt-level = "s"
debug = false
split-debuginfo = '...'
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = true
