[workspace]
members = [
    "serve",
    "serve-cli",
    "build-utils",
]
resolver = "2"

[workspace.package]
version = "2.1.4"
edition = "2024"

[profile.release]
opt-level = "s"
debug = false
split-debuginfo = '...'
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = true
