[package]
name = "serve-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.15"
indicatif = "0.17"
directories = "5"
toml = "0.8"

[profile.release]
opt-level = "s"
debug = false
split-debuginfo = '...'
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = true