[package]
name = "serve"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5.50", features = ["derive"] }
mime_guess = "2"
pathdiff = "0.2"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
html-escape = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
http-body-util = { version = "0.1", default-features = false }
